--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "sass": "^1.57.1",
     "vite": "^4.0.0"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.6",
     "@rollup/plugin-inject": "^5.0.3",
+    "bootstrap": "^5.2.3",
     "jquery": "^3.6.3"
   }
 }
