--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "devDependencies": {
     "sass": "^1.57.1",
-    "vite": "^4.0.0"
+    "vite": "^2.8.6",
+    "vite-plugin-html": "^3.2.0"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.6",
     "@rollup/plugin-inject": "^5.0.3",
     "bootstrap": "^5.2.3",
-    "jquery": "^3.6.3"
+    "jquery": "^3.6.3",
+    "pathe": "^1.0.0"
   }
 }
