--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   },
   "devDependencies": {
     "sass": "^1.57.1",
-    "vite": "^2.8.6",
-    "vite-plugin-html": "^3.2.0"
+    "vite": "^4.0.4",
+    "vite-plugin-html": "^3.2.0",
+    "vite-plugin-inspect": "^0.7.12"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.6",
